Finish evd analysis framework

--- a/Figures/create_figures.ipynb
+++ b/Figures/create_figures.ipynb
@@ -16,6 +16,7 @@
     "include(\"../src/empirical_evd.jl\")\n",
     "using .empirical_evd\n",
     "using Plots\n",
+    "using BPTT\n",
     "\n",
     "function lorenz_regimes()\n",
     "    tss = [create_series(\"lorenz\", 20)]\n",
@@ -51,6 +52,177 @@
     "    savefig(g, \"../Figures/bursting_neuron/bursting_neuron_regimes.png\")\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module empirical_evd.\n",
+      "WARNING: using empirical_evd.load_result_path in module Main conflicts with an existing identifier.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "lorenz_evd (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include(\"../src/empirical_evd.jl\")\n",
+    "using .empirical_evd\n",
+    "using Plots\n",
+    "using BPTT\n",
+    "using LinearAlgebra\n",
+    "\n",
+    "function lorenz_evd()\n",
+    "    function remove!(a, item)\n",
+    "        deleteat!(a, findall(x -> x == item, a))\n",
+    "    end\n",
+    "\n",
+    "    experiments = readdir(\"../Results\")\n",
+    "    remove!(experiments, \"default\")\n",
+    "    deleteat!(experiments, findall(x -> occursin(\"bursting\", x), experiments))\n",
+    "\n",
+    "    # load all the experiments\n",
+    "    for exp in experiments\n",
+    "        model_path = load_result_path(exp, 1000, 1)\n",
+    "        m = BPTT.load_model(model_path)\n",
+    "\n",
+    "        # compose single matrix AW\n",
+    "        AW = diagm(m.A) + m.W\n",
+    "\n",
+    "        # get evd of AW\n",
+    "        EVD = eigen(AW)\n",
+    "        λs = EVD.values\n",
+    "        Vs = EVD.vectors\n",
+    "        try\n",
+    "            push!(exp_λs, λs)\n",
+    "            push!(exp_Vs, Vs)\n",
+    "        catch e\n",
+    "            global exp_λs = [λs]\n",
+    "            global exp_Vs = [Vs]\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    # for making subplots for each experiment\n",
+    "    function make_subplots(exp, plots, type)\n",
+    "        if exp == \"lorenz\"\n",
+    "            μ = \"ρ\"\n",
+    "            title = [\"\\n20\" \"ρ as bifurcation parameter\\n22\" \"\\n24\" \"\\n25\" \"\\n28\" \"\\n34\"]\n",
+    "        else\n",
+    "            μ = \"\\$g_{nmda}\\$\"\n",
+    "            title = [\"\\n2\" \"$μ as bifurcation parameter\\n3\" \"\\n5\" \"\\n9\" \"\\n10\" \"\\n10.2\"]\n",
+    "        end\n",
+    "        p = plot(plots..., layout=grid(1, 6),\n",
+    "            title=title, titlefont=font(11),\n",
+    "            legend=nothing,\n",
+    "            plot_title=\"$type of evd with $exp plrnn\", plot_titlevspan=0.08\n",
+    "        )\n",
+    "        display(p)\n",
+    "    end\n",
+    "\n",
+    "    # convert to array\n",
+    "    arr_exp_l = reduce(hcat, exp_λs)\n",
+    "\n",
+    "    # Plots of single experiments\n",
+    "\n",
+    "    # sort the absolute values for comparison\n",
+    "    abs_λ = [sort(abs.(lambdas)) for lambdas in exp_λs]\n",
+    "\n",
+    "    # histogram of all abs values\n",
+    "    hists_abs_val = (histogram(abs_val, bins=8) for abs_val in abs_λ)\n",
+    "\n",
+    "    # im and real part in one figure\n",
+    "    for lambdas in exp_λs\n",
+    "        imre = scatter(imag(lambdas), label=\"imag\")\n",
+    "        scatter!(imre, real(lambdas), label=\"real\")\n",
+    "        try\n",
+    "            push!(im_res, imre)\n",
+    "        catch\n",
+    "            global im_res = [imre]\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    # abs values together\n",
+    "    for abs_val in abs_λ\n",
+    "        id = 1\n",
+    "        try\n",
+    "            scatter!(abss, abs_val, 1:15, label=\"run $id\")\n",
+    "        catch\n",
+    "            global abss = scatter(abs_val, 1:15, label=\"run $id\")\n",
+    "        end\n",
+    "        id+=1\n",
+    "    end\n",
+    "    savefig(abss, \"lorenz/change_in_abs_vals.png\")\n",
+    "\n",
+    "\n",
+    "    make_subplots(\"lorenz\", hists_abs_val, \"hist of abs val\")\n",
+    "    make_subplots(\"lorenz\", im_res, \"im and real\")\n",
+    "\n",
+    "    # look at change of the parameters\n",
+    "    for id in 2:3#6 # for all experiments\n",
+    "        try\n",
+    "            push!(change_abs, abs_λ[id] ./ abs_λ[id-1])\n",
+    "        catch e\n",
+    "            global change_abs = [abs_λ[id] ./ abs_λ[id-1]]\n",
+    "        end\n",
+    "    end\n",
+    "    arr_change_abs = reduce(hcat, change_abs)\n",
+    "\n",
+    "    # hist of overall change in all eigenvalues\n",
+    "    hist_abs = histogram(collect(Iterators.flatten(change_abs) .- 1),\n",
+    "        bins=15,\n",
+    "        title=\"change of all eigenvalues\",\n",
+    "        legend=nothing)\n",
+    "    savefig(hist_abs, \"lorenz/overall_cahnge_abs_val.png\")\n",
+    "\n",
+    "    # hist of change of the values\n",
+    "    hist_lambda_abs = scatter(sum(arr_change_abs, dims=2), title=\"sum of change of eigenvalues\", legend=nothing)\n",
+    "    vline!(hist_lambda_abs, [12, 13], c=:blue, linewidth=1)\n",
+    "    savefig(hist_lambda_abs, \"lorenz/change_of_ev.png\")\n",
+    "\n",
+    "    # plot the change of some of the imoprtant eigenvalues\n",
+    "    val, idx = findmax(sum(arr_change_abs, dims=2))\n",
+    "    arr_abs_λ = reduce(hcat, abs_λ)\n",
+    "\n",
+    "    #plots have to be adjusted manually to see the ones crossing 1\n",
+    "    a = plot(arr_abs_λ[12, :])\n",
+    "    b = plot(arr_abs_λ[13, :])\n",
+    "    c = plot(arr_abs_λ[idx[2], :])\n",
+    "    d = plot(a, b, c, layout=grid(1, 3), size=(800, 300))\n",
+    "    savefig(d, \"lorenz/ev_t_cross1.png\")\n",
+    "\n",
+    "    # heatmap for all eigenvalues\n",
+    "    heatmap(abs.(arr_abs_λ), c=:thermal)\n",
+    "    savefig(heat, \"lorenz/heatmap.png\")\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lorenz_evd()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -60,7 +232,10 @@
    "name": "julia-1.7"
   },
   "language_info": {
-   "name": "julia"
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.7.3"
   },
   "orig_nbformat": 4
  },
