Minor fix in evd all lorenz

--- a/Figures/create_evd_figures.ipynb
+++ b/Figures/create_evd_figures.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# notebook in which all figures are created "
+    "# notebook in which all figures are created for the empirical evd\n"
    ]
   },
   {
@@ -611,22 +611,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "lorenz_evd_all (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function evd_all(bins::Int64, system::String)\n",
-    "\n",
     "    bins = bins\n",
     "    exp_str = system\n",
     "    dir = \"../Figures/$(exp_str)_all\"\n",
@@ -636,7 +625,7 @@
     "\n",
     "    experiments = readdir(\"../Results\")\n",
     "    remove!(experiments, \"default\")\n",
-    "    deleteat!(experiments, findall(x -> !occursin(system, x), experiments))\n",
+    "    deleteat!(experiments, findall(x -> !occursin(exp_str, x), experiments))\n",
     "\n",
     "    # load all the experiments\n",
     "    for exp in experiments\n",
@@ -746,7 +735,7 @@
     "    make_subplots(exp_str, hists_ims, \"histogram of imaginary part\")\n",
     "    make_subplots(exp_str, hists_res, \"historam of real parts\")\n",
     "\n",
-    "    _, index = findmax(exp_λs[1])\n",
+    "    _, index = findmax(abs_λs[1])\n",
     "\n",
     "    # abs values together for one case\n",
     "    if exp_str == \"lorenz\"\n",
@@ -795,7 +784,7 @@
     "    for id in idcs\n",
     "        arr_change_abs_p[id] = 0\n",
     "    end\n",
-    "    \n",
+    "\n",
     "    # hist of overall change in all eigenvalues\n",
     "    hist_abs_p = histogram(collect(Iterators.flatten(arr_change_abs_p .- 1)),\n",
     "        title=\"percentual change of all eigenvalues\",\n",
@@ -820,11 +809,11 @@
     "    a = plot(abs_ls_sort[:, idx[2], idx[3]], xlabel=\"experiment\", ylabel=\"b.E.\")\n",
     "    b = plot(abs_ls_sort[:, idx_p[2], idx_p[3]], xlabel=\"experiment\", ylabel=\"%\")\n",
     "\n",
-    "    p = plot(a, b, layout=2,\n",
+    "    d = plot(a, b, layout=2,\n",
     "        size=(1000, 500),\n",
     "        legend=nothing,\n",
     "        margin=10mm,\n",
-    "        title=[\"absolute change\" \"percentual change\"],\n",
+    "        title=[\"most absolute change\" \"most percentual change\"],\n",
     "        plot_title=\"detailed changes of absolute values\", plot_titlevspan=0.05)\n",
     "    savefig(d, \"../Figures/lorenz_all/ev_t_detail.png\")\n",
     "end"
@@ -832,43 +821,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Error: Some Julia code in the VS Code extension crashed\n",
-      "└ @ VSCodeServer /home/patrick/.vscode/extensions/julialang.language-julia-1.6.28/scripts/error_handler.jl:15\n",
-      "\u001b[91m\u001b[1mERROR: \u001b[22m\u001b[39m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TypeError: in isdefined, expected Symbol, got a value of type Tuple{Int64, Core.Compiler.NewSSAValue}\n",
-      "Stacktrace:\n",
-      " [1] \u001b[0m\u001b[1mgetvariables\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mshow_modules\u001b[39m::\u001b[0mBool\u001b[0m\u001b[1m)\u001b[22m\n",
-      "\u001b[90m   @ \u001b[39m\u001b[35mVSCodeServer\u001b[39m \u001b[90m~/.vscode/extensions/julialang.language-julia-1.6.28/scripts/packages/VSCodeServer/src/\u001b[39m\u001b[90m\u001b[4mtrees.jl:277\u001b[24m\u001b[39m\n",
-      " [2] \u001b[0m\u001b[1m#invokelatest#2\u001b[22m\n",
-      "\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:716\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [3] \u001b[0m\u001b[1minvokelatest\u001b[22m\n",
-      "\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90m\u001b[4messentials.jl:714\u001b[24m\u001b[39m\u001b[90m [inlined]\u001b[39m\n",
-      " [4] \u001b[0m\u001b[1mrepl_getvariables_request\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mconn\u001b[39m::\u001b[0mVSCodeServer.JSONRPC.JSONRPCEndpoint\u001b[90m{Base.PipeEndpoint, Base.PipeEndpoint}\u001b[39m, \u001b[90mparams\u001b[39m::\u001b[0mNamedTuple\u001b[90m{(:modules,), Tuple{Bool}}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m\n",
-      "\u001b[90m   @ \u001b[39m\u001b[35mVSCodeServer\u001b[39m \u001b[90m~/.vscode/extensions/julialang.language-julia-1.6.28/scripts/packages/VSCodeServer/src/\u001b[39m\u001b[90m\u001b[4mtrees.jl:269\u001b[24m\u001b[39m\n",
-      " [5] \u001b[0m\u001b[1mdispatch_msg\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mx\u001b[39m::\u001b[0mVSCodeServer.JSONRPC.JSONRPCEndpoint\u001b[90m{Base.PipeEndpoint, Base.PipeEndpoint}\u001b[39m, \u001b[90mdispatcher\u001b[39m::\u001b[0mVSCodeServer.JSONRPC.MsgDispatcher, \u001b[90mmsg\u001b[39m::\u001b[0mDict\u001b[90m{String, Any}\u001b[39m\u001b[0m\u001b[1m)\u001b[22m\n",
-      "\u001b[90m   @ \u001b[39m\u001b[35mVSCodeServer.JSONRPC\u001b[39m \u001b[90m~/.vscode/extensions/julialang.language-julia-1.6.28/scripts/packages/JSONRPC/src/\u001b[39m\u001b[90m\u001b[4mtyped.jl:67\u001b[24m\u001b[39m\n",
-      " [6] \u001b[0m\u001b[1mserve_notebook\u001b[22m\u001b[0m\u001b[1m(\u001b[22m\u001b[90mpipename\u001b[39m::\u001b[0mString, \u001b[90moutputchannel_logger\u001b[39m::\u001b[0mBase.CoreLogging.SimpleLogger; \u001b[90mcrashreporting_pipename\u001b[39m::\u001b[0mString\u001b[0m\u001b[1m)\u001b[22m\n",
-      "\u001b[90m   @ \u001b[39m\u001b[35mVSCodeServer\u001b[39m \u001b[90m~/.vscode/extensions/julialang.language-julia-1.6.28/scripts/packages/VSCodeServer/src/\u001b[39m\u001b[90m\u001b[4mserve_notebook.jl:139\u001b[24m\u001b[39m\n",
-      " [7] top-level scope\n",
-      "\u001b[90m   @ \u001b[39m\u001b[90m~/.vscode/extensions/julialang.language-julia-1.6.28/scripts/notebook/\u001b[39m\u001b[90m\u001b[4mnotebook.jl:32\u001b[24m\u001b[39m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lorenz_evd_all(20, \"lorenz\")"
+    "evd_all(20, \"lorenz\")"
    ]
   },
   {
