Remove function for evd all

--- a/eval/ev_analysis.ipynb
+++ b/eval/ev_analysis.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,14 @@
     "using BPTT\n",
     "include(\"../src/empirical_evd.jl\")\n",
     "using .empirical_evd#\n",
-    "using Plots\n"
+    "using Plots\n",
+    "using Measures\n",
+    "using SplitApplyCombine\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +112,25 @@
     "        end\n",
     "    end\n",
     "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vector{Vector{Vector{ComplexF32}}} (alias for Array{Array{Array{Complex{Float32}, 1}, 1}, 1})"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "typeof(exp_λs)"
    ]
   },
   {
