--- a/Figures/create_evd_figures.ipynb
+++ b/Figures/create_evd_figures.ipynb
@@ -55,7 +55,7 @@
     "            legend=nothing, \n",
     "            plot_title=\"3d lorenz regimes\", plot_titlevspan=0.08)\n",
     "    mkpath(\"../Figures/lorenz/\") \n",
-    "    savefig(g, \"../Figures/lorenz/lorenz_regimes.png\")\n",
+    "    savefig(g, \"../Figures/regimes/lorenz_regimes.png\")\n",
     "end\n",
     "\n",
     "function bursting_neuron_regimes()\n",
@@ -73,7 +73,7 @@
     "        size=(500, 500)\n",
     "    )\n",
     "    mkpath(\"../Figures/bursting_neuron/\")\n",
-    "    savefig(g, \"../Figures/bursting_neuron/bursting_neuron_regimes.png\")\n",
+    "    savefig(g, \"../Figures/regimes/bursting_neuron_regimes.png\")\n",
     "end"
    ]
   },
@@ -610,213 +610,227 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lorenz evd all\n",
+    "## create all the figures in the next cell"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "function evd_all(bins::Int64, system::String)\n",
-    "    bins = bins\n",
-    "    exp_str = system\n",
-    "    dir = \"../Figures/$(exp_str)_all\"\n",
-    "    function remove!(a, item)\n",
-    "        deleteat!(a, findall(x -> x == item, a))\n",
-    "    end\n",
+    "bins = 100\n",
+    "exp_str = \"lorenz\"\n",
+    "dir = \"../Figures/$(exp_str)_all\"\n",
+    "function remove!(a, item)\n",
+    "    deleteat!(a, findall(x -> x == item, a))\n",
+    "end\n",
     "\n",
-    "    experiments = readdir(\"../Results\")\n",
-    "    remove!(experiments, \"default\")\n",
-    "    deleteat!(experiments, findall(x -> !occursin(exp_str, x), experiments))\n",
+    "experiments = readdir(\"../Results\")\n",
+    "remove!(experiments, \"default\")\n",
+    "deleteat!(experiments, findall(x -> !occursin(exp_str, x), experiments))\n",
     "\n",
-    "    # load all the experiments\n",
-    "    for exp in experiments\n",
-    "        model_path = load_result_path(exp, 5000, 1)\n",
-    "        m = BPTT.load_model(model_path)\n",
-    "\n",
-    "        # copy all images\n",
-    "        mkpath(dir)\n",
-    "        dst_path = \"$dir/$(exp)_traj.png\"\n",
-    "        # cp(load_result_path(exp, 5000, 1; img=true), dst_path, force=true)\n",
-    "\n",
-    "        # safe the latent dim of the plrnn\n",
-    "        dim = length(m.A)\n",
-    "\n",
-    "        # loop over all possible matrices D\n",
-    "        all_Ds = ([0, 1] for i in 1:dim)\n",
-    "        global all_λs = nothing\n",
-    "        global all_λs = Vector{Vector{ComplexF32}}()\n",
-    "        for (i, D) in enumerate(collect(Iterators.product(all_Ds...)))\n",
-    "            Dt = diagm(collect(D))\n",
-    "\n",
-    "            # compose single matrix A+WD\n",
-    "            AWD = diagm(m.A) + m.W * Dt\n",
-    "\n",
-    "            # get evd of AWD\n",
-    "            EVD = eigen(AWD)\n",
-    "            λs = EVD.values\n",
-    "            Vs = EVD.vectors\n",
-    "            # add the same for Vs by doing the same with labda->v\n",
-    "            push!(all_λs, complex(λs))\n",
-    "        end\n",
-    "        try\n",
-    "            push!(exp_λs, all_λs)\n",
-    "        catch e\n",
-    "            if typeof(e) == UndefVarError\n",
-    "                global exp_λs = [all_λs]\n",
-    "            else\n",
-    "                rethrow(e)\n",
-    "            end\n",
-    "        end\n",
-    "    end\n",
-    "\n",
-    "    model_path = load_result_path(experiments[1], 5000, 1)\n",
+    "# load all the experiments\n",
+    "for exp in experiments\n",
+    "    model_path = load_result_path(exp, 5000, 1)\n",
     "    m = BPTT.load_model(model_path)\n",
+    "\n",
+    "    # copy all images\n",
+    "    mkpath(dir)\n",
+    "    dst_path = \"$dir/$(exp)_traj.png\"\n",
+    "    # cp(load_result_path(exp, 5000, 1; img=true), dst_path, force=true)\n",
+    "\n",
+    "    # safe the latent dim of the plrnn\n",
     "    dim = length(m.A)\n",
-    "    #just a few checks\n",
-    "    @assert length(exp_λs) == length(experiments)\n",
-    "    @assert typeof(exp_λs) == Vector{Vector{Vector{ComplexF32}}}\n",
-    "    @assert [length(exp_λs[i]) for i in 1:length(experiments)] == [2^length(m.A) for i in 1:length(experiments)]\n",
     "\n",
-    "    # for making subplots for each experiment\n",
-    "    function make_subplots(exp, plots, type)\n",
-    "        if exp == \"lorenz\"\n",
-    "            μ = \"ρ\"\n",
-    "            title = [\"\\n20\" \"ρ as bifurcation parameter\\n22\" \"\\n24\" \"\\n25\" \"\\n28\" \"\\n34\"]\n",
+    "    # loop over all possible matrices D\n",
+    "    all_Ds = ([0, 1] for i in 1:dim)\n",
+    "    global all_λs = nothing\n",
+    "    global all_λs = Vector{Vector{ComplexF32}}()\n",
+    "    for (i, D) in enumerate(collect(Iterators.product(all_Ds...)))\n",
+    "        Dt = diagm(collect(D))\n",
+    "\n",
+    "        # compose single matrix A+WD\n",
+    "        AWD = diagm(m.A) + m.W * Dt\n",
+    "\n",
+    "        # get evd of AWD\n",
+    "        EVD = eigen(AWD)\n",
+    "        λs = EVD.values\n",
+    "        Vs = EVD.vectors\n",
+    "        # add the same for Vs by doing the same with labda->v\n",
+    "        push!(all_λs, complex(λs))\n",
+    "    end\n",
+    "    try\n",
+    "        push!(exp_λs, all_λs)\n",
+    "    catch e\n",
+    "        if typeof(e) == UndefVarError\n",
+    "            global exp_λs = [all_λs]\n",
     "        else\n",
-    "            μ = \"\\$g_{nmda}\\$\"\n",
-    "            title = [\"\\n2\" \"$μ as bifurcation parameter\\n3\" \"\\n5\" \"\\n9\" \"\\n10\" \"\\n10.2\"]\n",
-    "        end\n",
-    "        p = plot(plots..., layout=length(plots),\n",
-    "            title=title, titlefont=font(11),\n",
-    "            plot_title=\"$type of evd with \\n $exp plrnn\", plot_titlevspan=0.15\n",
-    "        )\n",
-    "        type_str = replace(type, \" \" => \"_\") # replace the spaces for savefig\n",
-    "        savefig(p, \"../Figures/$(exp)_all/$(exp)_$(type_str)_evd.png\")\n",
-    "    end\n",
-    "\n",
-    "    # convert to array\n",
-    "    arr_l = combinedims(exp_λs)\n",
-    "    arr_l = combinedims(arr_l)\n",
-    "    exp_λs = splitdims(arr_l)\n",
-    "    arr_l = permutedims(arr_l, (3, 2, 1))\n",
-    "\n",
-    "    # sort all the arrays\n",
-    "    abs_ls_sort = zeros(6, 2^dim, dim)\n",
-    "    res_ls_sort = zeros(6, 2^dim, dim)\n",
-    "    ims_ls_sort = complex(zeros(6, 2^dim, dim))\n",
-    "\n",
-    "    for (ex, all_lambdas) in enumerate(exp_λs)\n",
-    "        abs_ls = abs.(all_lambdas)\n",
-    "        res_ls = real(all_lambdas)\n",
-    "        ims_ls = imag(all_lambdas)\n",
-    "        v = nothing\n",
-    "        for i in 1:size(all_lambdas)[2]\n",
-    "            v = sortperm(abs_ls[:, i])\n",
-    "            abs_ls_sort[ex, i, :] = abs_ls[v, i]\n",
-    "            res_ls_sort[ex, i, :] = res_ls[v, i]\n",
-    "            ims_ls_sort[ex, i, :] = ims_ls[v, i]\n",
+    "            rethrow(e)\n",
     "        end\n",
     "    end\n",
+    "end\n",
     "\n",
-    "    # Plots of single experiments\n",
-    "    # make it a vector for easy iteration\n",
-    "    abs_λs = splitdims(abs_ls_sort, 1)\n",
-    "    ims_λs = splitdims(ims_ls_sort, 1)\n",
-    "    res_λs = splitdims(res_ls_sort, 1)\n",
+    "model_path = load_result_path(experiments[1], 5000, 1)\n",
+    "m = BPTT.load_model(model_path)\n",
+    "dim = length(m.A)\n",
+    "#just a few checks\n",
+    "@assert length(exp_λs) == length(experiments)\n",
+    "@assert typeof(exp_λs) == Vector{Vector{Vector{ComplexF32}}}\n",
+    "@assert [length(exp_λs[i]) for i in 1:length(experiments)] == [2^length(m.A) for i in 1:length(experiments)]\n",
     "\n",
-    "\n",
-    "    # histogram of all abs values\n",
-    "    hists_abs_val = (histogram(collect(Iterators.flatten(abs_val)), yaxis=:log, bins=bins, legend=nothing, xlabel=\"Ev value [b.E.]\", ylabel=\"Hits\") for abs_val in abs_λs)\n",
-    "\n",
-    "    # im and real part histograms\n",
-    "    hists_ims = (histogram(collect(Iterators.flatten(ims_val)), yaxis=:log, bins=bins, xlabel=\"Ev value [b.E.]\") for ims_val in ims_λs)\n",
-    "    hists_res = (histogram(collect(Iterators.flatten(res_val)), yaxis=:log, bins=bins, xlabel=\"Ev value [b.E.]\") for res_val in res_λs)\n",
-    "\n",
-    "    make_subplots(exp_str, hists_abs_val, \"histogram of absolute values\")\n",
-    "    make_subplots(exp_str, hists_ims, \"histogram of imaginary part\")\n",
-    "    make_subplots(exp_str, hists_res, \"historam of real parts\")\n",
-    "\n",
-    "    _, index = findmax(abs_λs[1])\n",
-    "\n",
-    "    # abs values together for one case\n",
-    "    if exp_str == \"lorenz\"\n",
-    "        c = [:red, :red, :turquoise, :green, :black, :black]\n",
-    "        label = [\"limit cycle\", \"limit cycle\", \"limit cycle\", \"right after bifurcation\", \"chaotic regime\", \"chaotic regime\"]\n",
+    "# for making subplots for each experiment\n",
+    "function make_subplots(exp, plots, type)\n",
+    "    if exp == \"lorenz\"\n",
+    "        μ = \"ρ\"\n",
+    "        title = [\"\\n20\" \"ρ as bifurcation parameter\\n22\" \"\\n24\" \"\\n25\" \"\\n28\" \"\\n34\"]\n",
     "    else\n",
-    "        c = [:orange, :red, :darkred, :purple, :black]\n",
-    "        label = [\"cycle\", \"1 loop\", \"4 loops\", \"almost bursting\", \"bursting\"]\n",
+    "        μ = \"\\$g_{nmda}\\$\"\n",
+    "        title = [\"\\n2\" \"$μ as bifurcation parameter\\n3\" \"\\n5\" \"\\n9\" \"\\n10\" \"\\n10.2\"]\n",
     "    end\n",
-    "    for (i, abs_val) in enumerate(abs_λs)\n",
-    "        try\n",
-    "            plot!(abs_plot, abs_val[index[1], :], 1:dim, c=c[i], xlabel=\"Ev value [b.E.]\",\n",
-    "                ylabel=\"Ev No\", label=label[i])\n",
-    "        catch\n",
-    "            global abs_plot = plot(abs_val[index[1], :], 1:dim,\n",
-    "                c=c[i],\n",
-    "                label=label[i],\n",
-    "                xlabel=\"Ev value [b.E.]\",\n",
-    "                ylabel=\"Ev No\",\n",
-    "                plot_title=\"Eigenvalue evolution of quadrant $(index[1])\", plot_titlevspan=0.05)\n",
-    "        end\n",
+    "    p = plot(plots..., layout=length(plots),\n",
+    "        title=title, titlefont=font(11),\n",
+    "        plot_title=\"$type of evd with \\n $exp plrnn\", plot_titlevspan=0.15\n",
+    "    )\n",
+    "    type_str = replace(type, \" \" => \"_\") # replace the spaces for savefig\n",
+    "    savefig(p, \"../Figures/$(exp)_all/$(exp)_$(type_str)_evd.png\")\n",
+    "end\n",
+    "\n",
+    "# convert to array\n",
+    "arr_l = combinedims(exp_λs)\n",
+    "arr_l = combinedims(arr_l)\n",
+    "exp_λs = splitdims(arr_l)\n",
+    "arr_l = permutedims(arr_l, (3, 2, 1))\n",
+    "\n",
+    "# sort all the arrays\n",
+    "abs_ls_sort = zeros(6, 2^dim, dim)\n",
+    "res_ls_sort = zeros(6, 2^dim, dim)\n",
+    "ims_ls_sort = zeros(6, 2^dim, dim)\n",
+    "\n",
+    "for (ex, all_lambdas) in enumerate(exp_λs)\n",
+    "    abs_ls = abs.(all_lambdas)\n",
+    "    res_ls = real(all_lambdas)\n",
+    "    ims_ls = imag(all_lambdas)\n",
+    "    v = nothing\n",
+    "    for i in 1:size(all_lambdas)[2]\n",
+    "        v = sortperm(abs_ls[:, i])\n",
+    "        abs_ls_sort[ex, i, :] = abs_ls[v, i]\n",
+    "        res_ls_sort[ex, i, :] = res_ls[v, i]\n",
+    "        ims_ls_sort[ex, i, :] = ims_ls[v, i]\n",
     "    end\n",
-    "    savefig(abs_plot, \"../Figures/lorenz_all/change_in_abs_vals.png\")\n",
+    "end\n",
     "\n",
-    "    # look at change of the parameters\n",
-    "    for id in 2:length(experiments) # for all experiments\n",
-    "        try\n",
-    "            push!(change_abs, abs.(abs_λs[id] - abs_λs[id-1]))\n",
-    "        catch e\n",
-    "            global change_abs = [abs.(abs_λs[id] - abs_λs[id-1])]\n",
-    "        end\n",
+    "# Plots of single experiments\n",
+    "# make it a vector for easy iteration\n",
+    "abs_λs = splitdims(abs_ls_sort, 1)\n",
+    "ims_λs = splitdims(ims_ls_sort, 1)\n",
+    "res_λs = splitdims(res_ls_sort, 1)\n",
+    "\n",
+    "\n",
+    "# histogram of all abs values\n",
+    "hists_abs_val = (histogram(collect(Iterators.flatten(abs_val)), yaxis=:log, bins=bins, legend=nothing, xlabel=\"Ev value [b.E.]\", ylabel=\"Hits\") for abs_val in abs_λs)\n",
+    "\n",
+    "# im and real part histograms\n",
+    "hists_ims = (histogram(collect(Iterators.flatten(ims_val)), yaxis=:log, bins=bins, xlabel=\"Ev value [b.E.]\") for ims_val in ims_λs)\n",
+    "hists_res = (histogram(collect(Iterators.flatten(res_val)), yaxis=:log, bins=bins, xlabel=\"Ev value [b.E.]\") for res_val in res_λs)\n",
+    "\n",
+    "make_subplots(exp_str, hists_abs_val, \"histogram of absolute values\")\n",
+    "make_subplots(exp_str, hists_ims, \"histogram of imaginary part\")\n",
+    "make_subplots(exp_str, hists_res, \"historam of real parts\")\n",
+    "\n",
+    "_, index = findmax(abs_λs[1])\n",
+    "\n",
+    "# abs values together for one case\n",
+    "if exp_str == \"lorenz\"\n",
+    "    c = [:red, :red, :turquoise, :green, :black, :black]\n",
+    "    label = [\"limit cycle\", \"limit cycle\", \"limit cycle\", \"right after bifurcation\", \"chaotic regime\", \"chaotic regime\"]\n",
+    "else\n",
+    "    c = [:orange, :red, :darkred, :purple, :black]\n",
+    "    label = [\"cycle\", \"1 loop\", \"4 loops\", \"almost bursting\", \"bursting\"]\n",
+    "end\n",
+    "for (i, abs_val) in enumerate(abs_λs)\n",
+    "    try\n",
+    "        plot!(abs_plot, abs_val[index[1], :], 1:dim, c=c[i], xlabel=\"Ev value [b.E.]\",\n",
+    "            ylabel=\"Ev No\", label=label[i])\n",
+    "    catch\n",
+    "        global abs_plot = plot(abs_val[index[1], :], 1:dim,\n",
+    "            c=c[i],\n",
+    "            label=label[i],\n",
+    "            xlabel=\"Ev value [b.E.]\",\n",
+    "            ylabel=\"Ev No\",\n",
+    "            plot_title=\"Eigenvalue evolution of quadrant $(index[1])\", plot_titlevspan=0.05)\n",
     "    end\n",
+    "end\n",
+    "savefig(abs_plot, \"../Figures/lorenz_all/change_in_abs_vals.png\")\n",
     "\n",
-    "    # percentual change\n",
-    "    for id in 2:length(experiments) # for all experiments\n",
-    "        try\n",
-    "            push!(change_abs_p, abs.(abs_λs[id] ./ abs_λs[id-1]))\n",
-    "        catch e\n",
-    "            global change_abs_p = [abs.(abs_λs[id] ./ abs_λs[id-1])]\n",
-    "        end\n",
+    "# look at change of the parameters\n",
+    "for id in 2:length(experiments) # for all experiments\n",
+    "    try\n",
+    "        push!(change_abs, abs.(abs_λs[id] - abs_λs[id-1]))\n",
+    "    catch e\n",
+    "        global change_abs = [abs.(abs_λs[id] - abs_λs[id-1])]\n",
     "    end\n",
-    "    arr_change_abs = combinedims(change_abs, 1)\n",
-    "    arr_change_abs_p = combinedims(change_abs_p, 1)\n",
+    "end\n",
     "\n",
-    "    idcs = findall(x -> x >= 2, arr_change_abs_p)\n",
-    "    for id in idcs\n",
-    "        arr_change_abs_p[id] = 0\n",
+    "# percentual change\n",
+    "for id in 2:length(experiments) # for all experiments\n",
+    "    try\n",
+    "        push!(change_abs_p, abs.(abs_λs[id] ./ abs_λs[id-1]))\n",
+    "    catch e\n",
+    "        global change_abs_p = [abs.(abs_λs[id] ./ abs_λs[id-1])]\n",
     "    end\n",
+    "end\n",
+    "arr_change_abs = combinedims(change_abs, 1)\n",
+    "arr_change_abs_p = combinedims(change_abs_p, 1)\n",
     "\n",
-    "    # hist of overall change in all eigenvalues\n",
-    "    hist_abs_p = histogram(collect(Iterators.flatten(arr_change_abs_p .- 1)),\n",
-    "        title=\"percentual change of all eigenvalues\",\n",
-    "        yaxis=:log,\n",
-    "        legend=nothing, bins=bins)\n",
+    "idcs = findall(x -> x >= 2, arr_change_abs_p)\n",
+    "for id in idcs\n",
+    "    arr_change_abs_p[id] = 0\n",
+    "end\n",
     "\n",
-    "    # hist of overall change in all eigenvalues absou change\n",
-    "    hist_abs = histogram(collect(Iterators.flatten(arr_change_abs)),\n",
-    "        yaxis=:log,\n",
-    "        title=\"absolute change of all eigenvalues\",\n",
-    "        legend=nothing, bins=bins)\n",
+    "# hist of overall change in all eigenvalues\n",
+    "hist_abs_p = histogram(collect(Iterators.flatten(arr_change_abs_p .- 1)),\n",
+    "    title=\"percentual change of all eigenvalues\",\n",
+    "    yaxis=:log,\n",
+    "    legend=nothing, bins=bins)\n",
+    "\n",
+    "# hist of overall change in all eigenvalues absou change\n",
+    "hist_abs = histogram(collect(Iterators.flatten(arr_change_abs)),\n",
+    "    yaxis=:log,\n",
+    "    title=\"absolute change of all eigenvalues\",\n",
+    "    legend=nothing, bins=bins)\n",
     "\n",
     "\n",
-    "    savefig(hist_abs_p, \"../Figures/lorenz_all/overall_cahnge_abs_val_p.png\")\n",
-    "    savefig(hist_abs, \"../Figures/lorenz_all/overall_cahnge_abs_val.png\")\n",
+    "savefig(hist_abs_p, \"../Figures/lorenz_all/overall_cahnge_abs_val_p.png\")\n",
+    "savefig(hist_abs, \"../Figures/lorenz_all/overall_cahnge_abs_val.png\")\n",
     "\n",
-    "    # plot the change of some of the imoprtant eigenvalues\n",
-    "    val, idx = findmax(sum(arr_change_abs, dims=1))\n",
-    "    val_p, idx_p = findmax(sum(arr_change_abs_p, dims=1))\n",
+    "# plot the change of some of the imoprtant eigenvalues\n",
+    "val, idx = findmax(sum(arr_change_abs, dims=1))\n",
+    "val_p, idx_p = findmax(sum(arr_change_abs_p, dims=1))\n",
     "\n",
-    "    # specific plot, to show change of the most changing evs\n",
-    "    a = plot(abs_ls_sort[:, idx[2], idx[3]], xlabel=\"experiment\", ylabel=\"b.E.\")\n",
-    "    b = plot(abs_ls_sort[:, idx_p[2], idx_p[3]], xlabel=\"experiment\", ylabel=\"%\")\n",
+    "# specific plot, to show change of the most changing evs\n",
+    "a = plot(abs_ls_sort[:, idx[2], idx[3]], xlabel=\"experiment\", ylabel=\"b.E.\")\n",
+    "b = plot(abs_ls_sort[:, idx_p[2], idx_p[3]], xlabel=\"experiment\", ylabel=\"%\")\n",
     "\n",
-    "    d = plot(a, b, layout=2,\n",
-    "        size=(1000, 500),\n",
-    "        legend=nothing,\n",
-    "        margin=10mm,\n",
-    "        title=[\"most absolute change\" \"most percentual change\"],\n",
-    "        plot_title=\"detailed changes of absolute values\", plot_titlevspan=0.05)\n",
-    "    savefig(d, \"../Figures/lorenz_all/ev_t_detail.png\")\n",
-    "end"
+    "d = plot(a, b, layout=2,\n",
+    "    size=(1000, 500),\n",
+    "    legend=nothing,\n",
+    "    margin=10mm,\n",
+    "    title=[\"most absolute change\" \"most percentual change\"],\n",
+    "    plot_title=\"detailed changes of absolute values\", plot_titlevspan=0.05)\n",
+    "savefig(d, \"../Figures/lorenz_all/ev_t_detail.png\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bursting evd all\n",
+    "## create the figures in the next cell"
    ]
   },
   {
@@ -824,18 +838,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "evd_all(20, \"lorenz\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evd_all(20, \"bursting_neuron\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
