Update on Foulder Structure

--- a/Figures/create_evd_figures.ipynb
+++ b/Figures/create_evd_figures.ipynb
@@ -838,7 +838,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "include(\"bursting_all.jl\")\n",
+    "bursting_all()"
+   ]
   }
  ],
  "metadata": {
