--- a/Figures/create_evd_figures.ipynb
+++ b/Figures/create_evd_figures.ipynb
@@ -829,8 +829,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bursting evd all\n",
-    "## create the figures in the next cell"
+    "# Bursting evd all\n"
    ]
   },
   {
